# TER_Safety_ADAVEC

./: .gitignore  DIAPORAMA TER LAUBRY MARINO.pptx  Matrix-Usecase-V1.5.xlsx  Matrix-Usecase-V1.xlsx  Memo.txt  README.md  Rapport TER M1.docx  TERS2 Suivi.pptx  Transition Table with all variables.xlsx
SCADE/OLDScadeTERS2/: Operator1.xscade  ProjectTER - Copie.ewo  ProjectTER.etp  ProjectTER.ewo  ProjectTER.htm  SubclockTest2.xscade  SubclockTest21.xscade
SCADE/OLDScadeTERS2/KCG/: kcg_xml_filter_out.scade
SCADE/ProjectTER/: Operator1.xscade  ProjectTER - Copie.vsw  ProjectTER.err  ProjectTER.etp  ProjectTER.ewo  ProjectTER.htm  ProjectTER.xscade  SubclockTest0.xscade  SubclockTest1.xscade
SCADE/ProjectTER/KCG/: ProjectTER.cgcs  config.txt
SCADE/ProjetTERNoCCSLTest/: Operator3.xscade  Operator4.xscade  ProjetTERNoCCSLTest.err  ProjetTERNoCCSLTest.etp  ProjetTERNoCCSLTest.ewo  ProjetTERNoCCSLTest.htm  ProjetTERNoCCSLTest.vsw  ProjetTERNoCCSLTest.xscade  SubClock.xscade  SubClockTEXT.xscade
SCADE/ProjetTERNoCCSLTest/KCG/: NewSubClock.c  NewSubClock.h  NewSubClockTEXT.c  NewSubClockTEXT.h  ProjetTERNoCCSLTest.cgcs  config.txt  kcg_consts.c  kcg_consts.h  kcg_files.txt  (+9 more)
TEXT_SCADE/: AddClock.txt  Inf.txt  Intersection.txt  Minus.txt  SubClock.txt  Union.txt
TEXT_SCADE/Base/: Exclusion.txt  Precedence_50.txt  Sup.txt
TEXT_SCADE/Implemented/: AddClock.txt  Causality.txt  Causality2.txt  Exclusion.txt  Inf.txt  Intersection.txt  Minus.txt  Precedence2.txt  SubClock.txt  Sup.txt  Union.txt
eclipse-workspace/: .gitignore  README.md
eclipse-workspace/.metadata/: version.ini
eclipse-workspace/TERS2/: .classpath  .project  AddClock.xscade  CANtest.xml  CREtest.xml  Causality2.xscade  CauseEffect.scadegen  ChangeMode.scadegen  ChangeModes.xscade  DelayFor.xscade  ENCtest.xml  Exclusion.xscade  ExclusionCondition.scadegen  FinalTest.xscade  Human.lc  Inf.xscade  Intersection.xscade  Minus.xscade  Periodic.xscade  Precedence.xscade  Precedence2.xscade  README.txt  Road.lc  Scenario1.lc  Sup.xscade  Test.lc  Union.xscade  UnionTest.filegen  Vehicule.lc  addClockTest.txt  debugMode.xscade  subClockTest.txt  subClockTest.xscade
eclipse-workspace/ccsl-sts-main/embedded-ccsl/examples/blinker/board/: CMakeLists.txt  README.md
eclipse-workspace/ccsl-sts-main/embedded-ccsl/examples/blinker/interactive/: CMakeLists.txt  variables.h
eclipse-workspace/embedded-ccsl/: README.md
(+613 files in other folders)
